# TISS_ANS_hash

./: .bigtech-porte  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  THIRD_PARTY_LICENSES.md  TODO.md
.forgejo/: pull_request_template.md
.forgejo/issue_template/: bug_report.md  feature_request.md  new_port.md
.forgejo/workflows/: c.yml  cpp.yml  csharp.yml  dart.yml  delphi.yml  go.yml  java.yml  kotlin.yml  node.yml  php.yml  python.yml  release.yml  rust.yml  wasm.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_port.md
.github/workflows/: c.yml  cpp.yml  csharp.yml  dart.yml  delphi.yml  go.yml  java.yml  kotlin.yml  node.yml  php.yml  python.yml  release-csharp.yml  release-java.yml  release-node.yml  release-python.yml  release-rust.yml  rust.yml  split-php.yml  wasm.yml
conformance/: AMBIGUITY_NOTES.md  TEST_PLAN.md  build_fixture.py  reference.py  vectors.json
conformance/inputs/: syn_acento.xml  syn_atributo_folha.xml  syn_bom_utf8.xml  syn_cdata.xml  syn_comentario.xml  syn_crlf_value.xml  syn_default_ns.xml  syn_empty.xml  syn_entidade_numerica.xml  syn_entidades_xml.xml  syn_iso8859_simbolos.xml  syn_leading_zero.xml  syn_minimal.xml  syn_multi_guia.xml  syn_multi_hash.xml  syn_namespace_xsi.xml  syn_perf_grande.xml  syn_sem_hash.xml  syn_utf16.xml  syn_whitespace_puro.xml
docs/: ARCHITECTURE.md  CONCEITOS.md  FAQ.md  PORTING_GUIDE.md  RELEASING.md  SPEC.md  TUTORIAL.md  USAGE.md
docs/adr/: 0001-port-nativo-por-linguagem.md  0002-layout-monorepo.md  0003-packaging-e-versionamento.md  0004-ci-matrix.md  0005-reconciliacao-nomenclatura-groupid-workflows.md  0006-wasm-port.md
docs/legal/: DISCLAIMER.md  LGPD-NOTE.md  TISS-COMPLIANCE.md
langs/c/: .clang-tidy  CMakeLists.txt  Makefile  README.md  tiss-hash.pc.in
langs/c/cmake/: tiss_hashConfig.cmake.in
langs/c/include/: tiss_hash.h
langs/c/src/: tiss_hash.c
langs/c/tests/: test_conformance.c  test_vectors.h  test_xxe.c
langs/c/tools/: gen_test_vectors.py
langs/cpp/: .clang-tidy  CMakeLists.txt  README.md  tiss-hash-cpp.pc.in
langs/cpp/cmake/: tiss_hash_cppConfig.cmake.in
langs/cpp/include/tiss_hash/: tiss_hash.hpp
langs/cpp/src/: tiss_hash.cpp
langs/cpp/tests/: test_conformance.cpp  test_vectors.hpp
langs/cpp/tools/: gen_test_vectors.py
langs/csharp/: .editorconfig  .gitignore  README.md  TissHash.sln
langs/csharp/src/TissHash/: InvalidTissXmlException.cs  TissHash.cs  TissHash.csproj
langs/csharp/tests/TissHash.Tests/: ConformanceTests.cs  TissHash.Tests.csproj
langs/dart/: .gitignore  .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
langs/dart/example/: tiss_hash_example.dart
langs/dart/lib/: tiss_hash.dart
langs/dart/lib/src/: tiss_hash_base.dart
langs/dart/test/: conformance_test.dart
langs/dart/tool/: golden_check.dart
langs/delphi/: .gitignore  Makefile  README.md
langs/delphi/src/: TissHash.pas  conformance_test.pas  golden_test.pas  tisshash_cli.pas
langs/go/: .gitignore  README.md  doc.go  go.mod  tisshash.go  tisshash_test.go
langs/java/: .gitignore  README.md  checkstyle.xml  pom.xml
langs/java/src/main/java/dev/petrus/tisshash/: InvalidTissXmlException.java  TissHash.java
langs/java/src/test/java/dev/petrus/tisshash/: ConformanceTest.java  VectorsLoader.java
langs/kotlin/: .gitignore  README.md  build.gradle.kts  build.sh  pom.xml  settings.gradle.kts
langs/kotlin/src/main/kotlin/dev/petrus/tisshash/: InvalidTissXmlException.kt  TissHash.kt
langs/kotlin/src/test/kotlin/dev/petrus/tisshash/: ConformanceHarness.kt
langs/node/: .npmignore  README.md  eslint.config.js  package-lock.json  package.json
langs/node/src/: index.cjs  index.js
langs/node/test/: cjs-shim.test.cjs  conformance.test.js
langs/php/: .gitattributes  README.md
langs/php/wiki/: Como-usar.md  Home.md  _Footer.md  _Sidebar.md
langs/python/: README.md  pyproject.toml
langs/python/src/tiss_hash/: __init__.py  _core.py
langs/python/tests/: conftest.py  test_conformance.py
langs/rust/: .gitignore  Cargo.toml  README.md
langs/rust/src/: lib.rs
langs/rust/tests/: conformance.rs
langs/wasm/: Cargo.toml  README.md  build.sh  package.json
langs/wasm/examples/browser/: index.html
langs/wasm/examples/node/: run.mjs
langs/wasm/src/: lib.rs
langs/wasm/test/: conformance.mjs
